# ai-profile-manager

./: Cargo.toml  README.md  dist-workspace.toml  git-town.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-28-ai-profile-manager.md  2026-06-28-installer-script.md
docs/superpowers/specs/: 2026-06-28-ai-profile-manager-design.md  2026-06-28-installer-script-design.md
src/: cli.rs  context.rs  gitignore.rs  main.rs  manifest.rs  profile.rs  slots.rs  state.rs
tests/: integration.rs
