[package]
name = "aipm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aipm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
